DONT_TOUCH/css/style-timeline.css
body {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 14px;
  line-height: 1em;
  color: #333;
  background-color: #d6d1cc;
  margin: 0;
}

.h1,
h1 {
  font-size: initial !important;
}

h2,
h3,
h4,
h5 {
  margin-top: 5px;
  margin-bottom: 5px;
  line-height: 1;
}

ul#timeline-menu {
  height: 50px;
  text-align: center;
}

ul#timeline-menu li {
  position: relative;
  float: left;
  list-style: none;
  margin: 0;
  padding: 0;
}

ul#timeline-menu li a {
  display: block;
  text-decoration: none;
  font-size: 16px;
  padding: 10px;
  padding-top: 20px;
  color: #000;
  font-weight: 700;
  border-bottom: 5px solid transparent;
}

ul#timeline-menu li a:hover {
  color: #4f858b;
  border-bottom: 5px solid #4f858b;
  font-weight: 400;
}

section#timeline {
  position: relative;
  padding-bottom: 24px;
  overflow: hidden;
}

section#timeline:before {
  position: absolute;
  content: "";
  left: 49.95%;
  height: 100%;
  z-index: -1;
  width: 2px;
  background: #333;
}

section#timeline div[class*="group"] {
  text-align: center;
  font-weight: 700;
  color: #4f858b;
  font-size: 1.2em;
  letter-spacing: 5px;
  margin: 25px 0 25px 4px;
  background: #fff;
  height: 40px;
  display: block;
  padding: 12px;
}

section#timeline > article {
  position: relative;
  margin-bottom: 20px;
}

section#timeline > article > div.panel {
  display: inline-block;
  background-color: transparent;
  margin-bottom: 0;
  border: none;
  border-radius: 0;
  -webkit-box-shadow: none;
  box-shadow: none;
  width: 100%;
}

section#timeline > article > div.panel:before {
  content: " ";
  width: 20px;
  height: 20px;
  background: #f7f7f7;
  display: block;
  position: absolute;
  margin: 0 auto;
  left: 0;
  right: 0;
  top: 38px;
  border: 2px solid #4f858b;
  border-radius: 50%;
}

section#timeline > article > div.panel div.panel-body {
  text-align: right;
  border-right: 2px solid #4f858b;
  float: left;
  width: 39%;
  padding: 10px 25px 10px 25px;
  position: relative;
  color: #333;
  background: #fff;
}

section#timeline > article > div.panel div.panel-body h3.group-title {
  text-transform: uppercase;
  letter-spacing: 2px;
  font-size: 20px;
  margin-bottom: 5px;
}

section#timeline > article > div.panel div.panel-body span.group-sub-title {
  font-weight: 100;
  text-transform: uppercase;
  letter-spacing: 3px;
}

section#timeline > article > div.panel div.panel-body p {
  padding-top: 15px;
  font-weight: normal;
}

section#timeline > article > div.panel div.badge {
  display: inline-block;
  padding: 8px 16px !important;
  float: right;
  right: 36%;
  top: 30px;
  color: #333 !important;
  border-left: 2px solid #4f858b;
  position: relative;
  text-transform: uppercase;
  background-color: #fff;
  border-radius: 0;
  font-weight: 400;
}

section#timeline > article.inverted > div.panel .panel-body {
  text-align: left;
  border-right: none;
  border-left: 2px solid #4f858b;
  float: right;
  color: #151d2a;
}

section#timeline > article.inverted > div.panel div.badge {
  float: left;
  left: 36%;
  border-right: 2px solid #4f858b;
  border-left: none;
}

section#timeline > article:hover > div.panel:before {
  background: #4f858b;
  border: 2px solid #fff;
}

section#timeline > article:hover > div.panel div.badge,
section#timeline > article:hover > div.panel div.panel-body h3.group-title {
  color: #4f858b !important;
  border-color: #4f858b !important;
}

section#timeline > article:nth-last-child(2) > div.panel {
  width: 100%;
}

section#timeline > article:nth-last-child(2) > div.panel:before {
  background: #4f858b;
  position: absolute;
  bottom: 10px;
}

section#timeline > article:nth-last-child(2):hover > div.panel:before {
  border: none;
}

section#timeline > article > div.panel div.badge:last-child {
  display: none;
}

@media (max-width: 767px) {
  section#timeline > article > div.panel div.badge,
  section#timeline > article > div.panel div.panel-body {
    background: #f7f7f7;
  }

  section#timeline > article.inverted > div.panel .panel-body,
  section#timeline > article > div.panel div.panel-body {
    border-left: none;
    border-right: none;
  }

  section#timeline > article > div.panel div.panel-body {
    text-align: center;
    float: none;
    width: 100%;
    border-top: 2px solid #4f858b;
    top: 20px;
    margin-bottom: 30px;
    border-radius: 0;
  }

  section#timeline > article.inverted > div.panel div.badge,
  section#timeline > article > div.panel div.badge {
    text-align: center;
    display: block;
    float: none;
    position: static;
    border: none;
    border-bottom: 2px solid #4f858b;
    border-radius: 0;
  }

  section#timeline > article > div.panel:before {
    display: none;
  }

  section#timeline > article:nth-last-child(2) > div.panel:before {
    display: block;
  }
}

